--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -16,7 +16,8 @@
   background-color: white;
   border: 3px solid black;
   border-radius: 10px;
-  width: 20rem;
+  width: 8em;
+  /* 10rem */
   height: auto;
   margin-top: 10px;
   margin-bottom: 20px;
@@ -37,10 +38,6 @@
   padding-bottom: 8px;
   display: flex;
   justify-content: flex-end;
-}
-
-.image {
-  border-radius: 5px;
 }
 
 .subDivContainer {
